# pdm

src/pdm/cli/commands/: init.py
src/pdm/cli/templates/: __init__.py
src/pdm/cli/templates/maturin/: .gitignore  Cargo.toml  pyproject.toml
src/pdm/cli/templates/maturin/python/example_package/: __init__.py
src/pdm/cli/templates/maturin/src/: lib.rs
src/pdm/models/: backends.py
