[project]
name = "example-package"
version = "0.1.0"
description = "Default template for PDM package"
authors = []
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "example_package._rswrapper"
features = ["pyo3/extension-module"]